# charm-ops-interface-tls-certificates

./: .gitignore  .gitreview  .stestr.conf  ca_client.py  setup.cfg  setup.py  test-requirements.txt
interface_tls_certificates/: ca_client.py
test/: ca_client_test_data.py  multi_cert_rel_test_data_client.yaml  multi_cert_rel_test_data_server.yaml  test_ca_client.py
